--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,10 @@ a span.ti-twitter-alt {
     background-color: #E0F0F0;
 }
 
+.warmorange{
+	background-color: #FFB703;
+}
+
 .nav-tabs {
     margin-top: 20px;
 }
