--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,10 @@ a span.ti-twitter-alt {
 	background-color: #E9C46A;
 }
 
+.orangepicture {
+	background-color: #FD6D06;
+}
+
 .nav-tabs {
     margin-top: 20px;
 }
