--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,10 @@ a span.ti-twitter-alt {
 	background-color: #FD6D06;
 }
 
+.tealpicture {
+	background-color: #00F7DD;
+}
+
 .nav-tabs {
     margin-top: 20px;
 }
