--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,10 @@ a span.ti-twitter-alt {
 	background-color: #00F7DD;
 }
 
+.lightorangepicture {
+	background-color: #faa608;
+}
+
 .nav-tabs {
     margin-top: 20px;
 }
