--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,9 @@ a span.ti-twitter-alt {
 .yelloworange {
 	background-color: #ffb703;
 }
+.verylightorange {
+	background-color: #fddbc7;
+}
 .lightblue {
 	background-color: #8ecae6;
 }
