color submit button

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ a:hover, a:focus, a:active, a:visited {
     border-radius: 4px;
 }
 .btn-red {
-	background-color: #fb8500;
+	background-color: #fddbc7;
 	color: #fff;
 }
 .btn-yellow {
